# ECode

./: .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  justfile
App/: CMakeLists.txt  Main.cpp
CMake/: FindEACP.cmake  FindTreeSitter.cmake
Lib/: CMakeLists.txt
Lib/ECodeCore/: CMakeLists.txt  Commands.cpp  Commands.h  Cursor.cpp  Cursor.h  Document.cpp  Document.h  Editor.cpp  Editor.h  FileTree.cpp  FileTree.h  FuzzyMatch.h  Search.cpp  Search.h  Style.h  TextEdit.cpp  TextEdit.h  TextFile.cpp  TextFile.h  Utf8.h
Lib/ECodeRender/: CMakeLists.txt  GlyphBatch.cpp  GlyphBatch.h  PaintContext.cpp  PaintContext.h  TextRenderer.cpp  TextRenderer.h
Lib/ECodeSyntax/: CMakeLists.txt  SyntaxHighlighter.cpp  SyntaxHighlighter.h
Lib/ECodeUI/: CMakeLists.txt  Chrome.cpp  Chrome.h  CommandPalette.cpp  CommandPalette.h  ContextMenu.cpp  ContextMenu.h  EditorWidget.cpp  EditorWidget.h  FileTreeView.cpp  FileTreeView.h  FindBar.cpp  FindBar.h  Keymap.cpp  Keymap.h  ListView.cpp  ListView.h  MenuBuilder.cpp  MenuBuilder.h  ScrollView.cpp  ScrollView.h  Splitter.cpp  Splitter.h  TextField.cpp  TextField.h  Theme.h  UIText.cpp  UIText.h  Widget.cpp  Widget.h  WidgetHost.cpp  WidgetHost.h
Tests/: CMakeLists.txt  ChromeRenderTests.cpp  CommandPaletteTests.cpp  CommandTests.cpp  Common.h  ContextMenuRenderTests.cpp  ContextMenuTests.cpp  DocumentEditTests.cpp  DocumentTests.cpp  EditorTests.cpp  FileTreeTests.cpp  FileTreeViewTests.cpp  FindBarTests.cpp  FindRenderTests.cpp  KeymapTests.cpp  MenuBuilderTests.cpp  PaletteRenderTests.cpp  RenderIntegrationTests.cpp  ScrollTests.cpp  SearchTests.cpp  SplitterRenderTests.cpp  SplitterTests.cpp  StyleTests.cpp  SyntaxHighlighterTests.cpp  TextEditTests.cpp  TextFieldTests.cpp  TextFileTests.cpp  WidgetTests.cpp
